# json-convert

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .project.json  BITACORA.md  CHANGELOG.md  COMMANDS.md  DECISIONES-CONCURRENCIA.md  Dockerfile  INSTRUCCIONES.txt  MANIFIESTO.md  MEJORAS.md  METRICAS.md  MIGRATION-WORKFLOW.md  PROJECT-SCORE.md  README.md  RevisionManual.xlsx  SEMANAS_PR.json  _audit_check.py  _gen_urls.py  analisis_urls.py  audit.json  audit_report.py  docker-compose.yml  extract_aa.py  extract_browser.py  generate_migration_catalog.py  install.bat  match_prod_preview.py  menu.py  prune_excel_columns.py  pyproject.toml  resumen-errores.md  run.bat  run.ps1  test_audit_report.py  test_cache.py  test_extract_aa.py  test_gen_urls.py  test_integration.py  (+2 more)
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: audit.yml  docker-publish.yml  lint.yml  quality-gate.yml  test.yml  unit-tests.yml
.learnings/: 2026-06-30-semanas-pipeline.md  session-2026-06-18-learnings.md  session-2026-06-23-learnings.md  session-2026-06-24-learnings.md  session-2026-06-26-learnings.md  session-2026-06-26-part4-learnings.md  session-2026-06-29-lincoln-mx-learnings.md  session-2026-06-30-nameplate-analysis.md
MX/: implementacion-mx-blog.md
config/: .env.example  audit.json  requirements.txt
data/: SEMANA2_RECAPTURE.json  SEMANAS_MX.json  expected.json  url-mapping-mx.json  url-mapping.json
docs/: CUESTIONARIO-MEJORA.md  fallback-err-aborted.md  session-progress.md
json_convert/: __init__.py  aa_parser.py  browser.py  cache.py  excel.py  metrics.py  pipeline.py  styles.py  types.py  utils.py  validation.py
scripts/: _audit_check.py  _fix_files.py  _gen_urls.py  analisis_urls.py  analizar_nameplate.py  auditar_semanas.py  auditar_urls.py  corregir_nameplate.py  prune_excel_columns.py  update-urls.py
src/: __init__.py  audit_report.py  auditar_semanas.py  auditar_urls.py  extract_aa.py  extract_browser.py  gen_urls.py  generate_migration_catalog.py  generate_validation_matrix.py  match_prod_preview.py  menu.py  run.ps1
tests/: __init__.py  test_aa_async.py  test_audit_report.py  test_browser.py  test_cache.py  test_excel.py  test_extract_aa.py  test_gen_urls.py  test_integration.py  test_parse.py  test_utils.py
